# ProyectoDecaf

./: Ast.tc  CMakeLists.txt  EasyASM  Gramatica.txt  Lexer.hpp  Lexer.re  Parser.cpp  Parser.hpp  README.md  main.cpp
tests/: Array.decaf  Array2.decaf  Array2.txt  Clase.txt  Expresiones.decaf  Expresiones.txt  ForLoop.decaf  Funciones.decaf  Funciones.txt  IfElse.decaf  IfElse.txt  OpAritmeticos.decaf  OpAritmeticos.txt  OpRelacionales.decaf  OpRelacionales.txt  ParamPorValor.decaf  ParamPorValor.txt  RefParam.decaf  RefParam.txt  WhileLoop.decaf  WhileLoop.txt
