cmake_minimum_required(VERSION 3.14)
project(Proyecto)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_custom_command(
    OUTPUT LexerImpl.cpp
    COMMAND re2c -o LexerImpl.cpp ${PROJECT_SOURCE_DIR}/Lexer.re 
    MAIN_DEPENDENCY ${PROJECT_SOURCE_DIR}/Lexer.re
)

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${PROJECT_SOURCE_DIR})

add_executable(${PROJECT_NAME} 
  Lexer.hpp 
  LexerImpl.cpp 
  Parser.hpp
  Parser.cpp
  main.cpp
)
